# rust-option-engine

./: Cargo.toml  LICENSE  README.md
src/: README.md  greeks.rs  lib.rs
src/models/: binomial.rs  black_scholes.rs  mod.rs
tests/: binomial_crr.rs  binomial_payoff.rs  binomial_terminal_prices.rs  known_values.rs
